<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Заметки</string>
    <string name="plus">+</string>

    <string name="passwords">Пароли</string>
    <string name="text_passwords">sdjogsiod</string>
    <string name="category_security">Безопасность</string>
    <string name="date_passwords">21.12.21</string>

    <string name="recipes">Рецепты</string>
    <string name="text_recipes">x;ojfwl</string>
    <string name="category_casual">Повседневное</string>
    <string name="date_recipes">21.04.20</string>

    <string name="cities">Города</string>
    <string name="text_cities">dlivjanoe</string>
    <string name="category_travels">Путешествия</string>
    <string name="date_cities">03.03.03</string>
    <string name="enter_note_name">Название</string>
    <string name="enter_note_category">Категория</string>
    <string name="toolbar_title">Заметки</string>
    <string name="action_add">Добавить заметку</string>
    <string name="action_settings">Настройки</string>
    <string name="all_notes">Все заметки</string>
    <string name="favorites">Избранное</string>
    <string name="categories">Категории</string>
    <string name="account_name">Юзер Юзернейм</string>
    <string name="action_share">Поделиться</string>
    <string name="action_attach">Прикрепить</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_will_be_here">Здесь будут настройки</string>
    <string name="drawer_oren">open</string>
    <string name="drawer_close">close</string>
    <string name="are_you_sure">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="enter_note_date">Дата создания</string>
    <string name="add_dialog_title">Создание заметки</string>
    <string name="add_positive_button">Создать</string>
    <string name="cancel">Отмена</string>
    <string name="share_notification_title">Вы успешно поделились заметкой!</string>
    <string name="app_close">Приложение \"Заметки\" закрыто!</string>
    <string name="action_sort_list">Список</string>
    <string name="action_sort_grid">Таблица</string>
</resources>